--- a/pages/mknmaster.master
+++ b/pages/mknmaster.master
@@ -8,7 +8,7 @@
 <html class="no-js">
 <!--<![endif]-->
 
-<head>
+<head runat="server">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Miss Karma Nigeria</title>
@@ -155,6 +155,7 @@
     <!-- Main -->
     <script src="../js/main.js"></script>
 
+    
     <script>
         var d = new Date(new Date().getTime() + 200 * 120 * 120 * 2000);
 
@@ -173,5 +174,9 @@
             enableUtc: false
         });
     </script>
+
+    <!--File Upload Handler-->
+    <script src="../js/FileUploadHandler.js"></script>
+
 </body>
 </html>
